# insight

./: CMakeLists.txt  LICENSE  insight.cpp
backends/cpu/: CMakeLists.txt  cast.cpp  creation.cpp  elementwise.cpp  fft.cpp  indexing.cpp  init.h  linalg.cpp  manipulation.cpp  random.cpp  reduction.cpp  unary.cpp
backends/cuda/: CMakeLists.txt  gpu_init.cpp
backends/cuda/device/: cuda_device.cpp  cuda_device.h  cuda_event.cpp  cuda_event.h  cuda_factory.cpp  cuda_factory.h  cuda_profiler.cpp  cuda_profiler.h  cuda_stream.cpp  cuda_stream.h
backends/cuda/kernels/: cast.cu  creation.cu  elementwise.cu  fft.cu  indexing.cu  linalg.cu  manipulation.cu  random.cu  reduction.cu  unary.cu
cmake/: FetchDependency.cmake  FindCLAPACK.cmake  FindFFTW3.cmake  FindOpenBLAS.cmake
include/insight/: init.h  insight.h
include/insight/core/: array.h  dtype.h  exception.h  launch_config.h  place.h  shape.h  slice.h  strides.h
include/insight/io/: csv.h  print.h
include/insight/ops/: broadcast.h  complex.h  creation.h  elementwise.h  fft.h  indexing.h  linalg.h  manipulation.h  operator.h  random.h  reduction.h  signal.h
include/insight/plugin/: device_ext.h  op_registry.h
include/insight/utils/: features.h  promotion.h
src/: init.cpp
src/core/: array.cpp  dtype.cpp  place.cpp  shape.cpp  slice.cpp  strides.cpp
src/internal/: array_impl.h
src/io/: csv.cpp  print.cpp
src/ops/: broadcast.cpp  complex.cpp  creation.cpp  elementwise.cpp  fft.cpp  indexing.cpp  linalg.cpp  manipulation.cpp  operator.cpp  random.cpp  reduction.cpp  signal.cpp  unary.cpp
src/utils/: features.cpp  promotion.cpp
tests/: CMakeLists.txt
tests/cpu/: test_cast.cpp  test_complex.cpp  test_creation.cpp  test_csv.cpp  test_dtype.cpp  test_elementwise.cpp  test_fft.cpp  test_indexing.cpp  test_linalg.cpp  test_manipulation.cpp  test_operator.cpp  test_print.cpp  test_random.cpp  test_reduction.cpp  test_signal.cpp  test_unary.cpp
tests/cuda/: test_cast.cpp  test_complex.cpp  test_creation.cpp  test_csv.cpp  test_dtype.cpp  test_elementwise.cpp  test_fft.cpp  test_indexing.cpp  test_linalg.cpp  test_manipulation.cpp  test_operator.cpp  test_print.cpp  test_random.cpp  test_reduction.cpp  test_signal.cpp  test_unary.cpp
tools/: render2xlsx.py
